Updated some code

--- a/Week 4/Week 4 Day 3/Mini Project/CalculatorWeek4Day3/index.html
+++ b/Week 4/Week 4 Day 3/Mini Project/CalculatorWeek4Day3/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/style.css">
-    <style>
-      button {
-        width:70px;
-        height:70px;
-      }
-    </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator</title>
+    <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
+    <input type="text" name="Input" class="display">  
+    <br>
+    <button type="button" name="button" onclick="number(0);">0</button>
     <button type="button" name="button" onclick="number(1);">1</button>
     <button type="button" name="button" onclick="number(2);">2</button>
     <button type="button" name="button" onclick="number(3);">3</button>
@@ -19,17 +18,19 @@
     <button type="button" name="button" onclick="number(4);">4</button>
     <button type="button" name="button" onclick="number(5);">5</button>
     <button type="button" name="button" onclick="number(6);">6</button>
-    <br>
     <button type="button" name="button" onclick="number(7);">7</button>
+    <br>
     <button type="button" name="button" onclick="number(8);">8</button>
     <button type="button" name="button" onclick="number(9);">9</button>
-    <button type="button" name="button" onclick="number(0);">0</button>
-    <br>
+    <button type="button" name="button" onclick="operator('.');">.</button>
     <button type="button" name="button" onclick="operator('+');">+</button>
+    <br>
     <button type="button" name="button" onclick="operator('-');">-</button>
-    <button type="button" name="button" onclick="operator('*');">*</button>
+    <button type="button" name="button" onclick="operator('*');">X</button>
     <button type="button" name="button" onclick="operator('/');">/</button>
     <button type="button" name="button" onclick="equal();">=</button>
+    <br>
+
     <script src="JS.js" charset="utf-8"></script>
   </body>
 </html>
