Added DOM Exercises

--- a/Week 4/Week 4 Day 5/Exercises/Exercises XP/Exercise1.html
+++ b/Week 4/Week 4 Day 5/Exercises/Exercises XP/Exercise1.html
@@ -15,5 +15,6 @@
             <li><a href="#">My Pics</a></li>
         </ul>
     </div>
+    <script src="Exercise1JavaScript.js"></script>
 </body>
 </html>
