--- a/Week 4/Week 4 Day 2/Daily Challenge Words in the stars/Wordinthestars.html
+++ b/Week 4/Week 4 Day 2/Daily Challenge Words in the stars/Wordinthestars.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 
-    <script src="WordsinthestarsJS.js"></script>
+    <script src="WordinthestarsJS.js"></script>
 </body>
 </html>
